  - generate XHTML in FileWiki::Plugin::POD
  - Template::Plugin::FileWiki->PageTree() generates <ul class="collapse">
  - Template::Plugin::FileWiki->PageTree() generates "highlight" class:
    - in <li> if "highlight_list_item" is set
    - in <a> if "highlight_link" is set
  - adapted plugin framework to allow vars-provider plugins
  - added FileWiki::Plugin::Git, which provides variables such as "git commit date"
  - added FileWiki::Plugin::Perl, which provides PERL_PACKAGE and PERL_VERSION
  - enhanced variable declaration:
    - support for array variable declaration of form: "+mykey=value"
    - support for eval expressions on variables
    - support variable expansion in form: ${myvar} and ${myvar//match/replace}
    - support variable late expansion in form: ${{myvar}} and ${{myvar//match/replace}}
    - support logical expressions in form: $(( [[!]CONDITION:] EXPR0 || EXPR1 || ... ))
    - removed obsolete NAME_MATCH, MATCH_<var>, DIR_MATCH_<var> and SANITIZE_<var>
      hacks, this can now be solved with variable substitution and eval expressions
  - Gallery changes:
    - replaced GALLERY_IMAGE_<TYPE> declaration by GALLERY_IMAGE_TARGETS
    - replaced GALLERY_CONVERT_OPTIONS by GALLERY_IMAGE_CMD_JPG
    - replaced mobile_view variable by gallery_image_link, gallery_prevnext_bottom,
      gallery_prevnext_top and gallery_button_simple
    - added GALLERY_DISABLE_EXIF_WARNINGS
    - gallery templates: refactoring of gallery mosaic display (use
      display-block instead of tables): introduced new mosaic_* classes.
    - gallery templates: support for smartphones (two columns, fixed to
      50% width) and tablets (resized images, maximum height of 120px)
    - gallery templates: added mobile_view variable

* filewiki-current
  - added EXCLUDE system variable
  - changed default PLUGIN_MARKDOWN_MATCH=\.(md|txt)$
  - allow array vars for INCLUDE and EXCLUDE variables (e.g. +INCLUDE=foo)
  - added SORT_STRATEGY=none (no sorting, useful when using INCLUDE)