@@ -102,3 +102,4 @@ info_icon             $URI_PREFIX/img/info.png
 popout_icon           $URI_PREFIX/img/popout.png
 video_icon            $URI_PREFIX/img/video.png
 map_icon              $URI_PREFIX/img/google_maps.png
+swisstopo_icon        $URI_PREFIX/img/swisstopo.png
