@@ -62,3 +62,4 @@
   - changed default PLUGIN_MARKDOWN_MATCH=\.(md|txt)$
   - allow array vars for INCLUDE and EXCLUDE variables (e.g. +INCLUDE=foo)
   - added SORT_STRATEGY=none (no sorting, useful when using INCLUDE)
+  - added Template::Plugin::SwissTopo (swiss map plugin for Template Toolkit)
